добавил описание на 2 языках

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mysait": {
+    "halal_or_haram": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mysait",
+            "outputPath": "dist/halal_or_haram",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "mysait:build:production"
+              "browserTarget": "halal_or_haram:build:production"
             },
             "development": {
-              "browserTarget": "mysait:build:development"
+              "browserTarget": "halal_or_haram:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mysait:build"
+            "browserTarget": "halal_or_haram:build"
           }
         },
         "test": {
