--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.3",
-    "@angular/cdk": "^15.2.3",
+    "@angular/animations": "^15.2.8",
+    "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.2.3",
     "@angular/compiler": "^15.2.3",
     "@angular/core": "^15.2.3",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.3",
-    "@angular/material": "^14.2.7",
+    "@angular/material": "^15.2.8",
     "@angular/platform-browser": "^15.2.3",
     "@angular/platform-browser-dynamic": "^15.2.3",
     "@angular/router": "^15.2.3",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.20.0",
     "ngx-bootstrap": "^10.2.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
