--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "strictPropertyInitialization": false,
     "target": "ES2022",
     "module": "es2020",
+    "skipLibCheck": true,
     "lib": [
       "es2020",
       "dom"
